--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(241, 217, 221);
+  background-color: rgb(255, 255, 255);
 }
 .text-primary{
   color: #fa4a6a;
@@ -14,6 +14,6 @@ body{
   color: black;
   font-weight: 600;
 }
-.navbodycolor{
+.bg-marquee{
   background-color: rgb(241, 217, 221);
 }
