--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ body{
   color: black;
   font-weight: 600;
 }
+.navbody{
+  background-image: url("./assets/hero2.avif")  ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
 .bg-marquee{
   background-color: rgb(241, 217, 221);
 }
