--- a/src/component/content/Testimony.css
+++ b/src/component/content/Testimony.css
@@ -9,4 +9,22 @@
   .slick-dots li.slick-active button:before {
     color: #FF0000; /* Change the color of the active dot if needed */
   }
+
+  /* Limit the visible dots to only 3 */
+.testimony-slider .slick-dots li {
+    display: none; /* Hide all dots by default */
+  }
+  
+  .testimony-slider .slick-dots li.slick-active,
+  .testimony-slider .slick-dots li.slick-active + li,
+  .testimony-slider .slick-dots li.slick-active + li + li {
+    display: inline-block; /* Show the active dot and the next two dots */
+  }
+  
+  /* Ensure the dots container is centered */
+  .testimony-slider .slick-dots {
+    display: flex !important;
+    justify-content: center;
+  }
+  
   
