--- a/src/component/content/fee.module.css
+++ b/src/component/content/fee.module.css
@@ -4,15 +4,102 @@
   align-items: center;
   flex-direction: column;
   width: 290px;
-  background-color: red;
-  clip-path: circle(40% at 0 0);
-  transition: all 2s ease;
   color: black;
-}
-.card_style::before{
-  color: black;
+  position: relative;
+  cursor: pointer;
+  margin: 5px;
 }
 
-.card_style:hover{
-  clip-path: circle(100%);
+.card_style .content{
+width: 100%;
+height: 100%;
+background: #ffffff17;
+backdrop-filter: blur(20px);
+border: 1px solid #fff;
+color: white;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+box-shadow: 0 0 30px #0000000d;
+transition:all 0.4s ;
+padding: 5px;
+
+}
+
+.card_style .content .description{
+  margin-block: 10px;
+  font-weight: 600;
+  font-size: 14px;
+text-align: center;
+
+}
+
+
+.card_style .content .title{
+  margin-block: 10px;
+  font-weight: 600;
+  font-size: 18px;
+text-align: center;
+background-color: white;
+color:rgb(239 68 68);
+padding-inline: 15px;
+border-radius: 220px;
+}
+
+.card_style .price{
+background-color: white;
+color:rgb(239 68 68) ;
+font-weight: 600;
+padding-block: 26px;
+padding-inline: 8px;
+border-radius: 220px;
+}
+
+.card_style:hover .price{
+  background-color:rgb(239 68 68) ;
+  color:white;
+  font-weight: 700;
+  padding-block: 26px;
+  padding-inline: 8px;
+  border-radius: 220px;
+}
+
+.card_style:hover .content{
+  color: #171717;
+  font-weight: 400;
+}
+
+.card_style::before,.card_style::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  background-color: rgb(239 68 68);
+  z-index: -20;
+  transition:all 0.4s ;
+}
+
+.card_style::before{
+  top: 0;
+  right: 0;
+}
+
+.card_style::after{
+  bottom: 0;
+  left: 0;
+}
+
+.card_style:hover::before{
+  width: 50px;
+  height: 50px;
+  transform: translate(20px,-20px);
+  border-radius: 50%;
+}
+
+.card_style:hover::after{
+  width: 100px;
+  height: 100px;
+  transform: translate(-20px,20px);
+  border-radius: 50%;
 }
