--- a/src/component/content/fee.module.css
+++ b/src/component/content/fee.module.css
@@ -7,7 +7,7 @@
   color: black;
   position: relative;
   cursor: pointer;
-  margin: 5px;
+  margin: 10px;
 }
 
 .card_style .content{
@@ -48,21 +48,17 @@ border-radius: 220px;
 }
 
 .card_style .price{
-background-color: white;
-color:rgb(239 68 68) ;
-font-weight: 600;
-padding-block: 26px;
-padding-inline: 8px;
-border-radius: 220px;
+color:white;
+font-weight: 700;
+font-size: 20px;
+margin-block: 10px;
 }
 
 .card_style:hover .price{
-  background-color:rgb(239 68 68) ;
-  color:white;
+  color:rgb(239 68 68);
   font-weight: 700;
-  padding-block: 26px;
-  padding-inline: 8px;
-  border-radius: 220px;
+  font-size: 20px;
+  margin-block: 10px;
 }
 
 .card_style:hover .content{
