--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,10 @@
   width: 100%;
   height: 100%;
 }
+.bg-img{
+  width: 100%;
+  background-image: url(./assets/justicebutton.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
