--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,18 @@
     background-color: #EF4444; /* Border color */
   }
   
+  .full-border {
+    position: relative;
+  }
+  
+  .full-border::before {
+    content: '';
+    position: absolute;
+    top: 50px;
+    left: 200px;
+    transform: translateX(-50%);
+    height: 4px; /* Border thickness */
+    width: 410px; /* Border length */
+    background-color: #000; 
+  }
+  
