--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,23 @@
     content: '';
     position: absolute;
     top: 50px;
-    left: 200px;
+    left: 58%;
     transform: translateX(-50%);
     height: 4px; /* Border thickness */
     width: 410px; /* Border length */
     background-color: #000; 
   }
+  
+  @media (max-width: 768px) {
+    .full-border::before {
+      width: 300px; /* Reduced border length for small screens */
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .full-border::before {
+      width: 200px; /* Further reduced border length for very small screens */
+    }
+  }
+  
   
