--- a/src/component/content/Feature.module.css
+++ b/src/component/content/Feature.module.css
@@ -1,7 +1,7 @@
 .card{
   position: relative;
-  width: 390px;
-  height: 400px;
+  width: 280px;
+  height: 350px;
   background-color: #fff;
   display: flex ;
   flex-direction: column;
@@ -12,7 +12,7 @@
 .card .imgbox{
   position: relative;
   width: 100%;
-  height: 240px;
+  height: 220px;
   border-radius: 15px;
   display: flex;
   background-size: cover;
@@ -52,6 +52,25 @@
   border-radius: 15px ;
   border-bottom-left-radius: 0;
 border-top-left-radius: 0 ;
+border-top: 10px solid #fff;
+border-right: 5px solid #fff;
+padding-bottom: 10px;
+
+padding-bottom: 10px;
+}
+
+.card:hover .content{
+  position: relative;
+  width: 100%;
+  height: 150px;
+  background-color:#fff;
+  border-radius: 15px ;
+  border-bottom-left-radius: 0;
+border-top-left-radius: 0 ;
+border-top: 10px solid rgb(239 68 68);
+border-right: 5px solid rgb(239 68 68);
+padding-bottom: 10px;
+transition: all 0.3s ease;
 }
 
 
@@ -59,7 +78,7 @@ border-top-left-radius: 0 ;
 position: absolute;
 top: -80px;
 height: 80px;
-width: 60%;
+width: 68%;
 background:rgb(239 68 68) ;
 color: white;
 border-top: 10px solid #fff;
@@ -67,6 +86,21 @@ border-right: 10px solid #fff;
 border-top-right-radius: 25px;
 text-align: center;
 }
+
+.card:hover .content .description{
+  position: absolute;
+  top: -80px;
+  height: 80px;
+  width: 68%;
+  background:white ;
+  color: rgb(239 68 68);
+  border-top: 10px solid rgb(239 68 68);
+  border-right: 10px solid rgb(239 68 68);
+  border-top-right-radius: 25px;
+  text-align: center;
+  transition: all 0.3s ease;
+
+  }
 
 .card .content .description::before{
 content: "";
@@ -85,4 +119,20 @@ border-radius: 50%;
   height: 25px;
   background: transparent;
   border-radius: 50%;
+  }
+
+  .info{
+    font-size: 13px;
+    padding: 5px;
+    text-align: justify;
+  }
+
+  .card:hover 
+  .info{
+    font-size: 13px;
+    padding: 5px;
+    text-align: justify;
+    color:rgb(239 68 68) ;
+    transition: all 0.3s ease;
+
   }
