--- a/src/component/content/fee.module.css
+++ b/src/component/content/fee.module.css
@@ -29,7 +29,7 @@
 width: 100%;
 height: 100%;
 background: #ffffff17;
-backdrop-filter: blur(20px);
+/* backdrop-filter: blur(20px); */
 border: 1px solid #fff;
 color: white;
 display: flex;
@@ -141,3 +141,4 @@ background-repeat: no-repeat;
   transform: translate(-20px,20px);
   border-radius: 50%;
 }
+
