--- a/src/component/content/MissionVision.module.css
+++ b/src/component/content/MissionVision.module.css
@@ -7,7 +7,7 @@
   display: grid;
   grid-template-columns: 0.25fr 1fr;
   row-gap: 2.5rem;
-  color: #fff;
+  color: #121014;
   padding-block: 1.625rem;
   border-top: 1px solid rgb(255 255 255 / 15%);
 }
