--- a/src/component/content/MissionVision.module.css
+++ b/src/component/content/MissionVision.module.css
@@ -17,7 +17,7 @@
 .card-number {
   font-size: 1.125rem;
   font-weight: 700;
-  color: #f08;
+  color: #EF4444;
 }
 .card-title {
   font-size: clamp(1.125rem, 2.5vw, 2rem);
@@ -42,7 +42,7 @@
   width: fit-content;
   height: 3.375rem;
   padding-inline: 1.6875rem;
-  border: 1px solid #f08;
+  border: 1px solid #EF4444;
 }
 @media (width >= 48em) {
   .card {
@@ -69,7 +69,7 @@
     translate: -50% 0;
     width: 120%;
     height: 100%;
-    background-color: #f08;
+    background-color: #EF4444;
     border-radius: 0.5rem;
     opacity: 0;
     transition: opacity 250ms;
