--- a/src/component/content/registration.module.css
+++ b/src/component/content/registration.module.css
@@ -9,12 +9,14 @@
 
 .formBorder {
   border:  2px solid red;
-  border-radius: 20px;
-  margin-left: 700px;
-  margin-right: 700px;
+  border-radius: 25px;
+  /* margin-left: 700px;
+  margin-right: 700px; */
   margin-top: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top:8px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom:8px;
   font-weight: 500;
   font-size:22px ;
   }
@@ -26,5 +28,6 @@
       border-radius: 20px;
      font-weight: 500;
       font-size:22px ;
+      padding: 10px;
       }
   } 
