--- a/src/component/content/registration.module.css
+++ b/src/component/content/registration.module.css
@@ -8,17 +8,18 @@
 } */
 
 .formBorder {
-  border:  2px solid red;
+  border:  2px solid rgba(239, 68, 68) ;
   border-radius: 25px;
   /* margin-left: 700px;
   margin-right: 700px; */
   margin-top: 20px;
   padding-top:8px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-bottom:8px;
-  font-weight: 500;
-  font-size:22px ;
+  font-weight: 600;
+  font-size:30px ;
+  color:rgba(239, 68, 68) ;
   }
 
   @media ( max-width:480px)
