--- a/src/component/content/ContactUs.css
+++ b/src/component/content/ContactUs.css
@@ -3,7 +3,7 @@
   background: #fff;
   width: 800px;
   padding: 25px 40px 10px 40px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(239, 68, 68);
   transition: all 0.3s ease-in-out;
 }
 .container-main:hover {
