--- a/src/component/content/fee.module.css
+++ b/src/component/content/fee.module.css
@@ -3,12 +3,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width:290px;
-  height: 300px;
+  width: 100vh;
+  height: 330px;
   color: black;
   position: relative;
   cursor: pointer;
-  margin: 10px;
+  margin-top: 22px;
 }
 
 @media (max-width:732px){
