--- a/src/component/content/MpcjproductCard.module.css
+++ b/src/component/content/MpcjproductCard.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     width:290px;
-    height: 300px;
+    height: 340px;
     color: black;
     position: relative;
     cursor: pointer;
@@ -67,8 +67,29 @@
   color:white;
   font-weight: 700;
   font-size: 20px;
-  margin-block: 10px;
+  margin-block: 7px;
+
   }
+  .card_style .buy{
+  color:rgb(239 68 68);
+  font-weight: 700;
+  font-size: 15px;
+  margin-block: 2px;
+  background-color: white;
+  border-radius: 12px;
+  padding: 4px;
+  margin-bottom: 4px;
+  margin-top: 17px;
+  
+  }
+  .card_style:hover .buy{
+    color:white;
+    background-color: rgb(239 68 68);
+
+
+
+  }
+  
   
   .card_style .icons_div{
     background-color: white;
