--- a/src/component/content/Slider.module.css
+++ b/src/component/content/Slider.module.css
@@ -11,14 +11,14 @@
 
 .images {
   position: absolute;
-  bottom: -190px;
+  bottom: -220px;
   left: 50%;
   width: 1000px;
   height: 1000px;
   border-radius: 50%;
   transition: transform 0.5s ease;
   outline: 3px dashed #fff5;
-  outline-offset: -80px;
+  outline-offset: -20px;
 }
 
 .item {
@@ -34,27 +34,27 @@
   width: 300px;
   border-radius: 500px;
   border: 4px solid white;
-  
 }
 
-#prev, #next {
+.prev, .next {
   position: absolute;
   border: none;
-  font-size: 100px;
-  font-family: cursive;
+  font-size: 40px;
   background-color: transparent;
   color: #fff;
   font-weight: bold;
-  opacity: 0.3;
+  z-index: 1;
   cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-#prev {
-  top: 50%;
-  left: 250px;
+.prev {
+  left: 50px;
+  top:50%
 }
 
-#next {
-  top: 50%;
-  right: 250px;
+.next {
+  right: 50px;
+  top:50%
 }
