--- a/src/index.css
+++ b/src/index.css
@@ -28,19 +28,28 @@
     left: 100%;
     transform: translateX(-50%);
     height: 4px; /* Border thickness */
-    width: 410px; /* Border length */
+    width: 400px; /* Border length */
     background-color: #000; 
+  }
+  @media (max-width: 1024px) {
+    .full-border::before {
+      width: 200px; /* Adjust border length */
+      left: 40%;
+      transform: translateX(-50%);
+    }
   }
   
   @media (max-width: 768px) {
     .full-border::before {
-      width: 300px; /* Reduced border length for small screens */
+      width: 100px;
+      left: 40%; /* Reduced border length for small screens */
     }
   }
   
   @media (max-width: 480px) {
     .full-border::before {
-      width: 200px; /* Further reduced border length for very small screens */
+      width: 200px;
+      left: 50%; /* Further reduced border length for very small screens */
     }
   }
   
@@ -89,3 +98,22 @@ color: white;
   width: 90%;
   height: 30px;
 }}
+
+.aboutMentor{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 1024px) {
+  .aboutMentor {
+    display: flex;
+  flex-wrap: nowrap;
+  }
+}
+
+@media (max-width: 768px) {
+  .aboutMentor {
+    display: flex;
+  flex-wrap: wrap;
+  }
+}
