--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,16 @@ color: white;
   flex-wrap: wrap;
   }
 }
+
+@keyframes scroll {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 10s linear infinite;
+}
